# vpn

app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/ru/valishin/vpn/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dummy.cpp
app/src/main/java/ru/valishin/vpn/: MainActivity.kt  MyVpnService.kt
app/src/main/rust/: Cargo.toml  android_debug
app/src/main/rust/src/: client.rs  lib.rs  lib0.rs  server.rs  tls_util.rs  tun_util.rs
app/src/test/java/ru/valishin/vpn/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
